--- a/Web/Views/Compra/ComprasXCliente.cshtml
+++ b/Web/Views/Compra/ComprasXCliente.cshtml
@@ -6,8 +6,8 @@
 }
 
 
-
-
+<div class="content">
+    
 <h1 id="producto-titulo" class="producto-titulo text-center mb-5" style=" color: var(--gray-nav) !important; font-size: 2.3rem !important;">Mis Pedidos</h1>
 
 <div class="card">
@@ -64,7 +64,7 @@
                                                         </a>
                                                         @if (item.Estado == 3)
                                                         {
-                                                            <a href="@Url.Action("EvaluationCompraVendedor", "Compra", new { id = item.Id })" class="btnEstado btn  text-white btn flex-grow-1 pt-2" style="background: green ">
+                                                            <a href="@Url.Action("EvaluationCompraCliente", "Compra", new { id = item.Id })" class="btnEstado btn  text-white btn flex-grow-1 pt-2" style="background: green ">
                                                                 <span class="material-symbols-outlined">
                                                                     star
                                                                 </span>
@@ -89,6 +89,8 @@
 
     </div>
 </div>
+</div>
+
 
 
 
