--- a/Web/Views/Shared/_LayoutTienda.cshtml
+++ b/Web/Views/Shared/_LayoutTienda.cshtml
@@ -13,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
-    <link href="~/Content/Site.css?v=1.0" rel="stylesheet" />
+    <link href="~/Content/Site.css" rel="stylesheet" />
 
     <!-- Fontawesome CDN Link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
