--- a/Web/Views/Compra/EvaluationCompraCliente.cshtml
+++ b/Web/Views/Compra/EvaluationCompraCliente.cshtml
@@ -46,7 +46,7 @@
                             <input value="@i" type="radio" name="rate" id="rate-@a">
 
                         }
-                        <form action="#">
+                        <form action="#" class="form-evaluacion">
                             @*<header></header>*@
                             <span style="" class="w-100 d-flex justify-content-end"></span>
                             <div class="textarea mt-1 ">
