--- a/Web/Views/Compra/EvaluationCompraVendedor.cshtml
+++ b/Web/Views/Compra/EvaluationCompraVendedor.cshtml
@@ -53,7 +53,7 @@
                         <label for="rate-2" class="fas fa-star"></label>
                         <input value="1" type="radio" name="rate" id="rate-1">
                         <label for="rate-1" class="fas fa-star mb-2"></label>
-                        <form action="#">
+                        <form action="#" class="form-evaluacion">
                             @*<header></header>*@
                             <span style="" class="w-100 d-flex justify-content-end"></span>
                             <div class="textarea mt-1 ">
